# game-engine

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  QUICKSTART.md  QUICKSTART.md:Zone.Identifier  README.md  config.json  vcpkg.json
engine/: CMakeLists.txt
engine/include/core/: Engine.hpp  IModule.hpp  ModuleManager.hpp  ServiceLocator.hpp
engine/include/ecs/: Components.hpp  Systems.hpp
engine/include/modules/: IAssetManager.hpp  IPhysics.hpp  IRenderer.hpp
engine/src/: Engine.cpp  ModuleManager.cpp  ServiceLocator.cpp
examples/: CMakeLists.txt
examples/basic_2d/: CMakeLists.txt  main.cpp
examples/basic_3d/: CMakeLists.txt  main.cpp
examples/multiplayer_demo/: CMakeLists.txt  main.cpp
modules/: CMakeLists.txt
modules/renderer_interface/: CMakeLists.txt  IRenderer.hpp
modules/renderer_interface/include/: IRenderer.hpp
modules/renderer_raylib/: CMakeLists.txt  module.json
modules/renderer_raylib/include/: RaylibRenderer.hpp
modules/renderer_raylib/src/: RaylibRenderer.cpp
scripts/: build.sh
tests/: CMakeLists.txt  test_main.cpp
tests/core/: CMakeLists.txt  test_engine.cpp
tools/asset_cooker/: asset_cooker.py
tools/module_generator/: module_generator.py
